# ZT-Agent-Proxy

./: Makefile  README.md  pyproject.toml  test_proxy.py  test_smol.py
.opencode/: AGENTS.md  project-update-prompt.md
services/ai-gateway/: Dockerfile  requirements.txt
services/ai-gateway/src/: main.py
services/audit-service/: Dockerfile
services/audit-service/src/: main.py
services/credential-vault/: Dockerfile  requirements.txt
services/credential-vault/src/: main.py
services/identity-provider/: Dockerfile  requirements.txt
services/identity-provider/src/: main.py
services/policy-engine/: Dockerfile
services/policy-engine/src/: main.py
shared/: __init__.py  production.py
zt_gateway/: __main__.py  cli.py  smol_app.py
