[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zt-gateway"
version = "1.0.0"
description = "Transparent HTTP forward proxy for AI agents — inspect, rate-limit, and audit all API calls"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Tamer Al-Khatib"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "prometheus-client>=0.19.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/Tamerktb/ZT-Agentic-gateway"
Repository = "https://github.com/Tamerktb/ZT-Agentic-gateway"

[project.scripts]
zt-gateway = "zt_gateway.cli:main"

[tool.setuptools.packages.find]
include = ["zt_gateway*"]
